compiler/tests/fail/param_expansion/x86-64/global_not_constant.jazz
u64[1] a = { 1 };
u64 b = a[1];
  // a[1] is not defined, and thus constant propagation is impossible
